[REFAC] MovieService 리팩토링 및 JSON 직렬화 로직 추가
- ObjectMapper 필드 추가 및 JSON 직렬화용 헬퍼 메서드 추가
- applyDetailToMovie 메서드 가독성 개선 및 중복 코드 제거
- 배우 및 감독, OTT 제공 리스트를 JSON 배열 형태로 저장하도록 변경
- 불필요한 주석 제거 및 코드 간소화